--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "source/_post/0"]
 	path = source/_post/0
 	url = git@github.com:sisyphus1212/note.git
+[submodule "themes/tree"]
+	path = themes/tree
+	url = git@github.com:sisyphus1212/hexo-tree-plus.git
